# ad-covia

./: .gitignore  LICENSE  README.md
back-app/: .flake8  .gitignore  README.md  database.py  index.py  pyproject.toml  run-dev.sh  test.csv  test.py  user.py
back-app/covia_flask/: __init__.py  config.py.template  database.py  runserver.py  wsgi.py
back-app/covia_flask/models/: form.py
back-app/covia_flask/routes/: save_form.py
back-app/entities/: form.py
back-app/research/form_vision/: image.py  main.py  processor.py  template_matching.py
back-app/routes/: get_questions.py
front-app/: .eslintrc.json  README.md  package.json
front-app/public/: index.html  manifest.json
front-app/src/: App.tsx  index.tsx
front-app/src/components/: AnswerButton.tsx
front-app/src/lib/: api.tsx  settings.json
front-app/src/modules/questions/: api.tsx  constants.tsx  interfaces.tsx  mocks.tsx
front-app/src/pages/ADForm/: ADForm.tsx  index.tsx  useADForm.tsx
front-app/src/pages/ADForm/components/: Form.tsx  QuestionList.tsx  QuestionListItem.tsx
front-app/src/pages/ADForm/components/AnswerFields/: AnswerButton.tsx  InputAnswerFields.tsx  UserHashAnswerFields.tsx  YNAnswerFields.tsx  YNUAnswerFields.tsx  useUserHashAnswerFields.tsx
front-app/src/pages/DoctorForm/: DoctorForm.tsx  index.ts  useDoctorForm.ts
front-app/src/pages/Landing/: Landing.tsx  useLanding.tsx
front-app/src/store/: actions.ts  reducer.ts  selectors.ts  store.ts
