[tool.poetry]
name = "covia"
version = "0.1.0"
description = "Flask API for CovIA"
authors = ["Erwan de Lépinau <erwan@feedly.com>"]
license = "MIT"
packages = []

[tool.poetry.dependencies]
python = "^3.7"
sqlalchemy = "^1.3"
flask = "^1.1"
opencv-python = "^4.2"
scikit-learn = "^0.22.2"
jupyter = "^1.0"
notebook = "^6.0"

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0",allows-prereleases = true}
flake8 = "^3.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 80