[tool.poetry]
name = "covia"
version = "0.1.0"
description = "Flask API for CovIA"
authors = ["Erwan de Lépinau <erwan@feedly.com>"]
license = "MIT"
packages = []

[tool.poetry.dependencies]
python = "^3.6"
sqlalchemy = "^1.3"
flask = "^1.1"
opencv-python = "^4.2"
scikit-learn = "^0.22.2"
sqlalchemy-utils = "^0.36.3"

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0", allows-prereleases = true}
flake8 = "^3.7"
jupyter = "^1.0"
notebook = "^6.0"
mypy = "^0.770.0"
isort = "^4.3"


[tool.black]
line-length = 100

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
